--- a/chandra/billboard10.ipynb
+++ b/chandra/billboard10.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f24ae757ed2cfaf6acc73345e4b8767210c739f61d53d7a49a9ac13c09d5ee7d"
+  "signature": "sha256:0dd05cea8d3293173f572e916bd33e356574a4fc62e7510d7b230f64157a98c7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,19 +18,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import pandas as pd\n",
-      "dat = pd.read_csv(\".temp/LyricsGenreIdentification/data/raw/train-1.csv\")"
+      "dat = pd.read_csv(\"../data/raw/rb_adultcontemp_train.csv\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -44,13 +44,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 26,
+       "prompt_number": 4,
        "text": [
         "(3553, 6)"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -101,7 +101,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 5,
        "text": [
         "   Unnamed: 0          genre           artist                  song  \\\n",
         "0         225        R_and_B      karyn white           love saw it   \n",
@@ -113,7 +113,7 @@
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -123,8 +123,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 28
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/Users/Chandra/anaconda/lib/python2.7/site-packages/pandas/util/decorators.py:81: FutureWarning: the 'cols' keyword is deprecated, use 'subset' instead\n",
+        "  warnings.warn(msg, FutureWarning)\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -138,13 +147,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 29,
+       "prompt_number": 7,
        "text": [
         "(1112, 6)"
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -222,7 +231,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 30,
+       "prompt_number": 8,
        "text": [
         "    Unnamed: 0          genre            artist  \\\n",
         "14        1819  adult_contemp      petula clark   \n",
@@ -247,7 +256,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -261,13 +270,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 31,
+       "prompt_number": 9,
        "text": [
         "array(['adult_contemp', 'R_and_B'], dtype=object)"
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -289,7 +298,7 @@
        ]
       }
      ],
-     "prompt_number": 50
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -302,7 +311,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 53
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -368,7 +377,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 65
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -393,44 +402,76 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
+        "-c:1: SettingWithCopyWarning: \n",
+        "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+        "Try using .loc[row_indexer,col_indexer] = value instead\n",
+        "\n",
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+        "-c:2: SettingWithCopyWarning: \n",
+        "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+        "Try using .loc[row_indexer,col_indexer] = value instead\n",
+        "\n",
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "-c:3: SettingWithCopyWarning: \n",
+        "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+        "Try using .loc[row_indexer,col_indexer] = value instead\n",
+        "\n",
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
         "-c:4: SettingWithCopyWarning: \n",
         "A value is trying to be set on a copy of a slice from a DataFrame.\n",
         "Try using .loc[row_indexer,col_indexer] = value instead\n",
         "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
         "-c:5: SettingWithCopyWarning: \n",
         "A value is trying to be set on a copy of a slice from a DataFrame.\n",
         "Try using .loc[row_indexer,col_indexer] = value instead\n",
         "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
         "-c:6: SettingWithCopyWarning: \n",
         "A value is trying to be set on a copy of a slice from a DataFrame.\n",
         "Try using .loc[row_indexer,col_indexer] = value instead\n",
         "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
         "-c:7: SettingWithCopyWarning: \n",
         "A value is trying to be set on a copy of a slice from a DataFrame.\n",
         "Try using .loc[row_indexer,col_indexer] = value instead\n",
         "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
         "-c:8: SettingWithCopyWarning: \n",
         "A value is trying to be set on a copy of a slice from a DataFrame.\n",
         "Try using .loc[row_indexer,col_indexer] = value instead\n",
         "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
         "-c:9: SettingWithCopyWarning: \n",
+        "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+        "Try using .loc[row_indexer,col_indexer] = value instead\n",
+        "\n",
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+        "-c:10: SettingWithCopyWarning: \n",
         "A value is trying to be set on a copy of a slice from a DataFrame.\n",
         "Try using .loc[row_indexer,col_indexer] = value instead\n",
         "\n",
@@ -441,11 +482,6 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "-c:10: SettingWithCopyWarning: \n",
-        "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-        "Try using .loc[row_indexer,col_indexer] = value instead\n",
-        "\n",
-        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
         "-c:11: SettingWithCopyWarning: \n",
         "A value is trying to be set on a copy of a slice from a DataFrame.\n",
         "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -454,7 +490,7 @@
        ]
       }
      ],
-     "prompt_number": 66
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -465,12 +501,14 @@
       "newdat['avgLineLength'] = newdat['numberOfChars'] / newdat['numberOfLines']\n",
       "newdat['avgLineLengthWords'] = newdat['numberOfWords']/newdat['numberOfLines']\n",
       "newdat['nounDensity']= newdat['nounCount']/newdat['numberOfWords']\n",
-      "newdat['verbDensity'] = newdat['verbCount']/newdat['numberOfWords']"
+      "newdat['verbDensity'] = newdat['verbCount']/newdat['numberOfWords']\n",
+      "newdat['uniqueWordDensity'] = newdat['numberOfUniqueWords']/newdat['numberOfWords']\n",
+      "newdat['NonuniqueWordDensity'] = newdat['nonUniqueWords']/newdat['numberOfWords']"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 67
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -639,7 +677,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 68,
+       "prompt_number": 15,
        "text": [
         "    Unnamed: 0          genre            artist  \\\n",
         "14        1819  adult_contemp      petula clark   \n",
@@ -715,7 +753,7 @@
        ]
       }
      ],
-     "prompt_number": 68
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
